--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "eslint": "^8",
     "eslint-config-next": "13.5.6",
     "postcss": "^8",
+    "sass": "^1.70.0",
     "tailwindcss": "^3"
   }
 }
