--- a/package.json
+++ b/package.json
@@ -16,11 +16,11 @@
     "formik": "^2.4.5",
     "next": "13.5.6",
     "next-auth": "^4.24.5",
+    "ngrok": "^5.0.0-beta.2",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^4.10.1",
     "react-loader-spinner": "^5.3.4",
-    "react-responsive": "^9.0.2",
     "sharp": "^0.32.6",
     "uuid": "^9.0.1",
     "yup": "^1.2.0"
