--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hello-pangea/dnd": "^16.5.0",
     "@tanstack/react-table": "^8.9.3",
     "chart.js": "^4.4.1",
     "firebase": "^10.7.1",
@@ -17,7 +18,6 @@
     "next": "13.5.6",
     "next-auth": "^4.24.5",
     "react": "^18",
-    "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18",
     "react-icons": "^4.10.1",
     "react-loader-spinner": "^5.4.5",
