--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "firebase": "^10.7.1",
     "flowbite": "^2.2.1",
     "formik": "^2.4.5",
+    "moment": "^2.30.1",
     "next": "13.5.6",
     "next-auth": "^4.24.5",
     "react": "^18",
