--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,8 @@ NEXT_PUBLIC_FIREBASE_PROJECT_ID=""
 NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET=""
 NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID=""
 NEXT_PUBLIC_FIREBASE_APP_ID=""
+
+EMAIL=""
+EMAIL_PASS=""
+
+CHATGPT_SECRET_KEY=""
