--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "moment": "^2.30.1",
     "next": "13.5.6",
     "next-auth": "^4.24.5",
+    "nodemailer": "^6.9.12",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^4.10.1",
