--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "next": "13.5.6",
     "next-auth": "^4.24.5",
     "nodemailer": "^6.9.12",
+    "openai": "^4.32.1",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^4.10.1",
@@ -31,6 +32,7 @@
   "devDependencies": {
     "@next/bundle-analyzer": "^13.5.6",
     "autoprefixer": "^10",
+    "encoding": "^0.1.13",
     "eslint": "^8",
     "eslint-config-next": "13.5.6",
     "postcss": "^8",
