--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@hello-pangea/dnd": "^16.5.0",
     "@tanstack/react-table": "^8.9.3",
+    "@uidotdev/usehooks": "^2.4.1",
     "@yaireo/tagify": "^4.21.1",
     "chart.js": "^4.4.1",
     "firebase": "^10.7.1",
