--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-dom": "^18",
     "react-icons": "^4.10.1",
     "react-loader-spinner": "^5.4.5",
+    "react-mentions": "^4.4.10",
     "sharp": "^0.32.6",
     "uuid": "^9.0.1",
     "yup": "^1.2.0"
