--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
   "dependencies": {
     "@hello-pangea/dnd": "^16.5.0",
     "@tanstack/react-table": "^8.9.3",
-    "@uidotdev/usehooks": "^2.4.1",
     "@yaireo/tagify": "^4.21.1",
     "chart.js": "^4.4.1",
     "firebase": "^10.7.1",
@@ -28,6 +27,7 @@
     "react-loader-spinner": "^5.4.5",
     "react-mentions": "^4.4.10",
     "sharp": "^0.32.6",
+    "usehooks-ts": "^3.1.0",
     "uuid": "^9.0.1",
     "yup": "^1.2.0"
   },
