--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@hello-pangea/dnd": "^16.5.0",
     "@tanstack/react-table": "^8.9.3",
     "@yaireo/tagify": "^4.21.1",
-    "chart.js": "^4.4.1",
+    "chart.js": "^4.4.2",
     "firebase": "^10.7.1",
     "flowbite": "^2.2.1",
     "formik": "^2.4.5",
@@ -22,6 +22,7 @@
     "nodemailer": "^6.9.12",
     "openai": "^4.32.1",
     "react": "^18",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18",
     "react-icons": "^4.10.1",
     "react-loader-spinner": "^5.4.5",
