--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,5 @@
 NEXTAUTH_SECRET=""
+NEXT_PUBLIC_LOGIN_DOMAIN=""
 NEXT_PUBLIC_FIREBASE_API_KEY=""
 NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN=""
 NEXT_PUBLIC_FIREBASE_PROJECT_ID=""
