--- a/package.json
+++ b/package.json
@@ -27,7 +27,10 @@
     "react-dom": "^18",
     "react-icons": "^4.10.1",
     "react-loader-spinner": "^5.4.5",
+    "react-markdown": "^9.0.1",
     "react-mentions": "^4.4.10",
+    "react-syntax-highlighter": "^15.5.0",
+    "remark-gfm": "^4.0.0",
     "sharp": "^0.32.6",
     "usehooks-ts": "^3.1.0",
     "uuid": "^9.0.1",
