--- a/package.json
+++ b/package.json
@@ -10,13 +10,13 @@
   },
   "dependencies": {
     "@hello-pangea/dnd": "^16.5.0",
-    "@syncfusion/ej2-react-gantt": "^25.1.42",
     "@tanstack/react-table": "^8.9.3",
     "@yaireo/tagify": "^4.21.1",
     "chart.js": "^4.4.2",
     "firebase": "^10.7.1",
     "flowbite": "^2.2.1",
     "formik": "^2.4.5",
+    "gantt-task-react": "^0.3.9",
     "moment": "^2.30.1",
     "next": "13.5.6",
     "next-auth": "^4.24.5",
