--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@tanstack/react-table": "^8.9.3",
     "@yaireo/tagify": "^4.21.1",
     "chart.js": "^4.4.2",
+    "file-saver": "^2.0.5",
     "firebase": "^10.7.1",
     "flowbite": "^2.2.1",
     "formik": "^2.4.5",
