--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@fullcalendar/core": "^6.1.11",
     "@fullcalendar/daygrid": "^6.1.11",
+    "@fullcalendar/interaction": "^6.1.13",
     "@fullcalendar/react": "^6.1.11",
     "@hello-pangea/dnd": "^16.5.0",
     "@tanstack/react-table": "^8.9.3",
